center aligning text in password pages, fixing the about us UI issues, making the h1 headings bold

--- a/account/static/css/styles.css
+++ b/account/static/css/styles.css
@@ -285,7 +285,7 @@ body{
 
 
 .aboutus-container {
-    width: 60%;
+    /* width: 60%; */
     text-align: center;
     margin: 0 auto;
 }
@@ -301,7 +301,7 @@ body{
 
 .aboutus-container p{
     line-height: 150%;
-
+    font-size: 28px
 }
 
   /* styling the affirmations popup - karthik*/
@@ -354,7 +354,9 @@ padding: 15px;
     object-fit: contain !important;
     }
 /*fixing the footer spacing issues-ends here-karthik*/
-
+h1{
+  font-weight: bold !important;
+}
 
 
 /* iphone X landscape orientation */
@@ -381,7 +383,10 @@ and (orientation : portrait) {
     width: 100%;
     height: 30px;
 }
-
+.box-center{
+  margin: 0 auto;
+  text-align: center;
+}
 
 
 
